--- a/app/templates/analyse.html
+++ b/app/templates/analyse.html
@@ -205,7 +205,7 @@
 												</div>
 												<div class="product-content w-100 p-3">
 													<div class="mb-2">
-														<h4 class="mb-1 text-normal"><a href="#">Disease Name: {{ result_image.disease_name }}</a> </h4>
+														<h4 class="mb-1 text-normal"><a href="#">Nom de la maladie : {{ result_image.disease_name }}</a> </h4>
 														{% comment %} <p class="mb-0 text-muted text-start">brand name</p> {% endcomment %}
 													</div>
 													{% comment %} <p class="mb-2 text-warning">
