--- a/app/templates/analyse.html
+++ b/app/templates/analyse.html
@@ -75,7 +75,7 @@
 											</div>
 											<div class="card-body">
 												<div class="form-group mt-3">
-													<label class="form-label">Category</label>
+													<label class="form-label">Categories</label>
 													<select name="beast" id="select-beast" class="form-control form-select select2">
 														<option value="0">--Select--</option>
 														<option value="1">Dress</option>
@@ -92,7 +92,7 @@
 													</select>
 												</div>
 												<div class="form-group">
-													<label class="form-label">Brand</label>
+													<label class="form-label">Sous Categories</label>
 													<select name="beast" id="select-beast1" class="form-control form-select select2">
 														<option value="0">--Select--</option>
 														<option value="1">White</option>
@@ -104,7 +104,7 @@
 													</select>
 												</div>
 												<div class="form-group">
-													<label class="form-label">Type</label>
+													<label class="form-label">Type des maladies</label>
 													<select name="beast" id="select-beast2" class="form-control form-select select2">
 														<option value="0">--Select--</option>
 														<option value="1">Extra Small</option>
