--- a/app/templates/analyse.html
+++ b/app/templates/analyse.html
@@ -76,34 +76,26 @@
 											<div class="card-body">
 												<div class="form-group mt-3">
 													<label class="form-label">Categories</label>
-													<select name="beast" id="select-beast" class="form-control form-select select2">
+													<select name="plant" id="select-plant" class="form-control form-select select2">
 														<option value="0">--Select--</option>
-														<option value="1">Dress</option>
-														<option value="2">Bags &amp; Purses</option>
-														<option value="3">Coat &amp; Jacket</option>
-														<option value="4">Beauty</option>
-														<option value="5">Jeans</option>
-														<option value="5">Jewellery</option>
-														<option value="5">Electronics</option>
-														<option value="5">Sports</option>
-														<option value="5">Technology</option>
-														<option value="5">Watches</option>
-														<option value="5">Accessories</option>
+														{% for plant in plants %}
+															<option value="{{ plant.id }}">{{ plant.nom_plante }}</option>
+														{% endfor %}
 													</select>
 												</div>
 												<div class="form-group">
 													<label class="form-label">Sous Categories</label>
 													<select name="beast" id="select-beast1" class="form-control form-select select2">
 														<option value="0">--Select--</option>
-														<option value="1">White</option>
-														<option value="2">Black</option>
-														<option value="3">Red</option>
-														<option value="4">Green</option>
-														<option value="5">Blue</option>
-														<option value="6">Yellow</option>
 													</select>
 												</div>
 												<div class="form-group">
+													<label class="form-label">Type des maladies</label>
+													<select name="beast" id="select-beast2" class="form-control form-select select2">
+														<option value="0">--Select--</option>
+													</select>
+												</div>
+												{% comment %} <div class="form-group">
 													<label class="form-label">Type des maladies</label>
 													<select name="beast" id="select-beast2" class="form-control form-select select2">
 														<option value="0">--Select--</option>
@@ -113,7 +105,7 @@
 														<option value="4">Large</option>
 														<option value="5">Extra Large</option>
 													</select>
-												</div>
+												</div> {% endcomment %}
 												<a class="btn btn-primary my-1" href="#">Apply Filter</a>
 												<a class="btn btn-info my-1" href="#">Search Now</a>
 											</div>
@@ -406,6 +398,80 @@
 			});
 		});
 	</script>
+
+	<script type="text/javascript">
+		//For select sous categories
+		$(document).ready(function() {
+			$('#select-plant').change(function() {
+				var categoryId = $(this).val();
+				var subcategorySelect = $('#select-beast1');
+	
+				// Clear current subcategory options
+				subcategorySelect.empty();
+				subcategorySelect.append('<option value="0">--Select--</option>');
+	
+				if (categoryId != 0) {
+					$.ajax({
+						url: "{% url 'get_subcategories' %}",
+						data: {
+							'category_id': categoryId
+						},
+						success: function(response) {
+							var subcategories = response.subcategories;
+							for (var i = 0; i < subcategories.length; i++) {
+								subcategorySelect.append('<option value="' + subcategories[i].id + '">' + subcategories[i].name + '</option>');
+							}
+						}
+					});
+				}
+			});
+		});
+	</script>
+												
+	<script type="text/javascript">
+		// For select type maladies
+		$(document).ready(function() {
+			$('#select-plant').change(function() {
+				var categoryId = $(this).val();
+				var subcategorySelect = $('#select-beast1');
+				var anomalySelect = $('#select-beast2');
+	
+				// Clear current options
+				subcategorySelect.empty().append('<option value="0">--Select--</option>');
+				anomalySelect.empty().append('<option value="0">--Select--</option>');
+	
+				if (categoryId != 0) {
+					$.ajax({
+						url: "{% url 'get_subcategories' %}",
+						data: {
+							'category_id': categoryId
+						},
+						success: function(response) {
+							var subcategories = response.subcategories;
+							for (var i = 0; i < subcategories.length; i++) {
+								subcategorySelect.append('<option value="' + subcategories[i].id + '">' + subcategories[i].name + '</option>');
+							}
+						}
+					});
+	
+					$.ajax({
+						url: "{% url 'get_anomalies' %}",
+						data: {
+							'category_id': categoryId
+						},
+						success: function(response) {
+							var anomalies = response.anomalies;
+							for (var i = 0; i < anomalies.length; i++) {
+								anomalySelect.append('<option value="' + anomalies[i].id + '">' + anomalies[i].name + '</option>');
+							}
+						}
+					});
+				}
+			});
+		});
+	</script>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		
 	<!-- INTERNAL SELECT2 JS -->
 	<script src=" {% static 'assets/plugins/select2/select2.full.min.js' %} "></script>
