--- a/app/templates/analyse.html
+++ b/app/templates/analyse.html
@@ -152,7 +152,6 @@
 									</div>
 								</div>
 								
-								
 								<div class="row products-main">
 									{% for result_image in page_obj %}
 									<div class="col-12 col-md-6 col-sm-6 col-lg-6 col-xl-3 product-each">
@@ -323,7 +322,7 @@
 					</div>
 					<div class="modal-body">
 						<img id="resultImage" src="" alt="Image résultante">
-						<h4 class="mb-1 text-normal"><a href="#">Disease Name : {{ image.disease_name }}</a> </h4>
+						<h4 class="mb-1 text-normal"><a href="#">Nom de la maladie : {{ image.disease_name }}</a> </h4>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
