--- a/app/templates/outils-agricoles.html
+++ b/app/templates/outils-agricoles.html
@@ -488,7 +488,7 @@
                                     </div>
                                   <label for="prix-heure">Prix par heure :</label>
                                   <div class="input-icon">
-                                  <input class="form-control" id="prix-heure" type="number" name="prix_heure" placeholder="  10 Dt" onclick="displayIcon(this)">
+                                  <input class="form-control" id="prix-heure" type="number" name="prix_location_heure" placeholder="  10 Dt" onclick="displayIcon(this)">
                                   <span class="icon"><i class="fe fe-dollar-sign"></i></span>
                                   </div>
                                 </div>
@@ -498,7 +498,7 @@
                                     </div>
                                   <label for="prix-jour">Prix par jour :</label>
                                   <div class="input-icon">
-                                  <input class="form-control" id="prix-jour" type="number" name="prix_jour" placeholder="  100 Dt" onclick="displayIcon(this)">
+                                  <input class="form-control" id="prix-jour" type="number" name="prix_location_jour" placeholder="  100 Dt" onclick="displayIcon(this)">
                                   <span class="icon"><i class="fe fe-dollar-sign"></i></span>
                                   </div>
                                 </div>
@@ -508,7 +508,7 @@
                                     </div>
                                   <label for="prix-mois">Prix par mois :</label>
                                   <div class="input-icon">
-                                  <input class="form-control" id="prix-mois" type="number" name="prix_mois" placeholder="  500 Dt" onclick="displayIcon(this)">
+                                  <input class="form-control" id="prix-mois" type="number" name="prix_location_mois" placeholder="  500 Dt" onclick="displayIcon(this)">
                                   <span class="icon"><i class="fe fe-dollar-sign"></i></span>
                                   </div>
                                 </div>
