--- a/app/templates/analyse.html
+++ b/app/templates/analyse.html
@@ -120,20 +120,28 @@
 								<div class="card">
 									<div class="card-body">
 										<div class="row">
-											<div class="col-md-4">
-												<div class="form-group mb-0 my-1">
-													<select name="beast" id="select-beast4" class="form-control form-select select2">
-														<option value="0">
-															-- Sort By --
-														</option>
-														<option value="1">Featured</option>
-														<option value="2">Price: Hight to Low ↓</option>
-														<option value="3">Price: Low to High ↑</option>
-														<option value="4">Relese Date</option>
-														<option value="5">Rating</option>
-													</select>
+												<div class="col-md-4">
+													<form method="GET" action="{% url 'analyse' %}">
+													<div class="form-group mb-0 my-1">
+														<select name="sort_by" id="select-sort" class="form-control form-select select2" onchange="this.form.submit()">
+															<option value="">
+																-- Sort By --
+															</option>
+															<option value="date_desc">Date: Newest First</option>
+															<option value="date_asc">Date: Oldest First</option>
+															<option value="disease_name_asc">Disease Name: A to Z</option>
+															<option value="disease_name_desc">Disease Name: Z to A</option>
+														</select>
+													</div>
+													</form>
 												</div>
-											</div>
+											
+											<script>
+												document.getElementById('select-sort').value = "{{ request.GET.sort_by|default:'' }}";
+												document.getElementById('select-sort').onchange = function() {
+													this.form.submit();
+												};
+											</script>																			
 
 											<div class="col-md-4 text-center d-none d-xl-block">
 												<div class="btn-group my-1">
@@ -143,16 +151,30 @@
 												</div>
 											</div>
 											<div class="col-xl">
-												<div class="input-group my-1">
-													<input type="text" class="form-control" placeholder="Search ...">
-													<button id="searchButton" class="input-group-text btn btn-primary text-white">Search</button>
-												</div>
-											</div>
+												<form method="GET" action="{% url 'analyse' %}">
+													<div class="input-group my-1">
+														<input type="text" name="q" class="form-control" placeholder="Search ..." value="{{ request.GET.q }}">
+														<button id="searchButton" class="input-group-text btn btn-primary text-white">Search</button>
+													</div>
+												</form>
+											</div>											
 										</div>
 									</div>
 								</div>
 								
 								<div class="row products-main">
+									<!-- Affichage des résultats de recherche -->
+									{% if search_results %}
+									<div class="search-results">
+										{% for result in search_results %}
+											<div class="result-item">
+												<img src="{{ result.result_image.url }}" alt="{{ result.disease_name }}">
+												<p>{{ result.disease_name }}</p>
+											</div>
+										{% endfor %}
+									</div>
+									{% else %}
+									<!-- Affichage des images téléchargées s'il n'y a pas de recherche -->
 									{% for result_image in page_obj %}
 									<div class="col-12 col-md-6 col-sm-6 col-lg-6 col-xl-3 product-each">
 										<div class="card item-card">
@@ -278,7 +300,7 @@
 						</div>
 						<!-- ROW-1 CLOSED -->
 
-        {% endblock %}
+						{% endif %}{% endblock %}
 
 		{% block modal %}
 
@@ -322,7 +344,7 @@
 					</div>
 					<div class="modal-body">
 						<img id="resultImage" src="" alt="Image résultante">
-						<h4 class="mb-1 text-normal"><a href="#">Nom de la maladie : {{ image.disease_name }}</a> </h4>
+						{% comment %} <h4 class="mb-1 text-normal"><a href="#">Nom de la maladie : {{ image.disease_name }}</a> </h4> {% endcomment %}
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
@@ -336,6 +358,15 @@
         {% endblock %}
 
     {% block scripts %}
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			// Écoutez l'événement de fermeture de la modal
+			$('#resultModal').on('hidden.bs.modal', function () {
+				location.reload();  // Recharge la page
+			});
+		});
+	</script>
+	
 
 	<script>
 		//For Upload Image 
